security/host-validation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-svc-1-ing
  namespace: host-validation
  annotations:
    kubernetes.io/ingress.class: "nginx"
    appprotect.f5.com/app-protect-policy: "host-validation"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "nginx-ingress/logconf-elk"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=192.168.200.212:5144"
spec:
  rules:
  - host: microservice-security.101.net
    http:
      paths:
      - path: /devops
        pathType: Prefix
        backend:
          service:
            name: app-svc-1
            port:
              number: 80
  - host: microservice-security.201.net
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: app-svc-2
            port:
              number: 80
